--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="home">Home</string>
     <string name="favorite">Character</string>
     <string name="favorite_ic">Location</string>
+    <string name="image_desc">Character img</string>
 </resources>
